why won't this pass?

--- a/Graded Assignment 4.html
+++ b/Graded Assignment 4.html
@@ -4,38 +4,37 @@
       <title> Adventures In Drumming</title>
       <link rel="stylesheet" href="styles.css">
    </head>
-       <body>
-         <main>
-      <header id="mainHeading"> My Evolution As A Drummer</header>
-      <h1>This is a photo of me playing the drums</h1>
+   <main>
+      
+   <body>
+      <h1 id="mainHeading"> My Evolution As A Drummer</h1>
       <img src = "YellowBackgroundDrums.JPG" alt = "Drummer with yellow background.">
       <article>
       <p>I started playing the drums in 3rd grade. My mom bought me a kit and got me lessons that I <b> hated</b>. 
          My teacher <em>insisted</em> I use traditional grip on the my drumsticks, which most jazz drummers use 
          instead of match grip, which you'll see most rock drummers use. And I wanted to be a rock star</p>
-         <p>So, I stopped taking lessons, and started working on my own. I would just throw on my headphones and,
+         <p1>So, I stopped taking lessons, and started working on my own. I would just throw on my headphones and,
             start playing along with my favorite bands like <b> Weezer and Red Hot Chili Peppers and Foo Fighters</b> . 
             Instead of learning paradiddles <em> (which I would learn how important they are later in life) </em> , 
             I was figuring out on my own how I could mimic the parts they were playing. It certainly didn't make me the
             same time of technical drummer continuing with lessons would have, but what it <b> did </b> do was give me 
             an excellent sense of time. Something, that I've learned over 30 years of playing drums is that you can be
-            the most creative technical drummer in the world, but if you don't have time, its all <b><em> meaningless </em></b> . </p>
-            <p id="testP" class="funParagraph"> In high school, I started playing in my first real band. We weren't very good, but we had alot of fun and started 
-               playing <em> real </em> shows at <em> real </em> clubs.</p>
-               <h2>This is a flyer for the first show I ever played</h2>
+            the most creative technical drummer in the world, but if you don't have time, its all <b><em> meaningless </em></b> . </p1>
+            <p2 id="testP" class="funParagraph"> In high school, I started playing in my first real band. We weren't very good, but we had alot of fun and started 
+               playing <em> real </em> shows at <em> real </em> clubs.</p2>
                <img src = "1stShowFlyer.JPG" alt = "Flyer for first show.">
-               <p>All of a sudden, we were making &dollar;100 for each show and I felt like a professional musician, even if I still
+               <p3>All of a sudden, we were making &dollar;100 for each show and I felt like a professional musician, even if I still
                   wasn't very good. It took me another 10 years before I finally realized that I had reached the ceiling of skill I could
-                  accomplish on my own, and started taking lessons again as an adult. </p>
-                  <p>After taking lessons <em> as an adult </em> for a year, I was ten times the drummer I was, but I couldn't have 
+                  accomplish on my own, and started taking lessons again as an adult. </p3>
+                  <p4>After taking lessons <em> as an adult </em> for a year, I was ten times the drummer I was, but I couldn't have 
                   have made that same time of progress without practicing so much on my own, palying along my favorite bands. Music has 
                   always been, and always will be a huge part of my life...from <b>playing</b> it, to <b>appreciating</b> it. I hate to
-                  think how boring the world would be without music.</p>
+                  think how boring the world would be without music.</p4>
                </article>
                   <img src = "BohemianRhapsody.JPG" alt = "Pose with a group of Freddie Mercury impersonators.">
-                  <Footer>
-                     <p>This photo was taken at Riot Fest in Chicago</p>
-                  </Footer>
+                  <footer>
+                     <p5>This photo was taken at Riot Fest in Chicago</p5>
+                  </footer>
                      <h2>How To Become A Better Drummer</h2>
                      <ol>
                         <li>Get a kit or pads</li>
@@ -45,6 +44,7 @@
                         <li>Take lessons <b><em>after</em></b>you learn time</li>
                         <li>Practice and <b><em>HAVE FUN!</em></b></li>
                      </ol>
-         </main>
+                  </footer>
    </body>
+   </main>
 </html>
