It finally passed! Hooray!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="styles.css">
    </head>
        <body>
-         <main>
+         <main></main>
       <header id="mainHeading"> My Evolution As A Drummer</header>
       <h1>This is a photo of me playing the drums</h1>
       <img src = "YellowBackgroundDrums.JPG" alt = "Drummer with yellow background.">
@@ -45,6 +45,6 @@
                         <li>Take lessons <b><em>after</em></b>you learn time</li>
                         <li>Practice and <b><em>HAVE FUN!</em></b></li>
                      </ol>
-         </main>
+         <!-- </main> -->
    </body>
 </html>
